[package]
name = "wotsy_server"
version = "0.1.0"
authors = ["Sergey Noskov <snoskov@avito.ru>"]

[dependencies]
hyper="^0.12"
hyper-staticfile="^0.3"
futures="^0.1"
tokio-io="^0.1"
tokio-fs="^0.1"
pretty_env_logger="^0.2"
log="^0.4"
serde="^1"
serde_derive="^1"
serde_json="^1"
rand="^0.5"
base64 = "^0.9"
